--- a/tinker/faculty_bio/templates/faculty-bio-form.html
+++ b/tinker/faculty_bio/templates/faculty-bio-form.html
@@ -232,18 +232,18 @@
     }
 
     function makeRequired(){
-        $('#areas').attr('required', 'false');
-        $('#research_interests').attr('required', 'false');
-        $('#teaching_speciality').attr('required', 'false');
-        heading = $('#heading')[0];
-        var text = heading.options[heading.selectedIndex].innerHTML;
-
-        if( text == "Areas of expertise")
-            $('#areas').attr('required', 'true');
-        else if( text == "Research interests")
-            $('#research_interests').attr('required', 'true');
-        else if( text == "Teaching speciality")
-            $('#teaching_speciality').attr('required', 'required');
+{#        $('#areas').attr('required', 'false');#}
+{#        $('#research_interests').attr('required', 'false');#}
+{#        $('#teaching_speciality').attr('required', 'false');#}
+{#        heading = $('#heading')[0];#}
+{#        var text = heading.options[heading.selectedIndex].innerHTML;#}
+{##}
+{#        if( text == "Areas of expertise")#}
+{#            $('#areas').attr('required', 'true');#}
+{#        else if( text == "Research interests")#}
+{#            $('#research_interests').attr('required', 'true');#}
+{#        else if( text == "Teaching speciality")#}
+{#            $('#teaching_speciality').attr('required', 'required');#}
     }
 
     function newFieldset(id){
