Updated faculty bio title labels

--- a/tinker/faculty_bio/templates/faculty-bio-form.html
+++ b/tinker/faculty_bio/templates/faculty-bio-form.html
@@ -298,13 +298,13 @@
             ));
 
             node.append($('<div>').attr('class', 'hide-when-school-changes' + id).attr('id', 'dept-chair-div' + id)
-                .append($('<label>').html('I am the Department Chair?')
+                .append($('<label>').html('Are you the Department Chair?')
                     .append($('<label>').html('Yes').append($('<input type="radio">').attr('name', 'dept-chair' + id).attr('value', 'Yes')))
                     .append($('<label>').html('No').append($('<input type="radio">').attr('name', 'dept-chair' + id).attr('value', 'No')))
                 )
             );
             node.append($('<div>').attr('class', 'hide-when-school-changes' + id).attr('id', 'program-director-div' + id)
-                .append($('<label>').html('I am the Program Director?')
+                .append($('<label>').html('Are you the Program Director?')
                     .append($('<label>').html('Yes').append($('<input type="radio">').attr('name', 'program-director' + id).attr('value', 'Yes')))
                     .append($('<label>').html('No').append($('<input type="radio">').attr('name', 'program-director' + id).attr('value', 'No')))
                 )
@@ -803,13 +803,13 @@
       </div>
 
       <div id="dept-chair-div1" class="hide-when-school-changes1"><label>
-          I am the Department Chair?
+          Are you the Department Chair?
           <label><input type="radio" name="dept-chair1" value="Yes">Yes</label>
           <label><input type="radio" name="dept-chair1" value="No">No</label>
       </label></div>
 
       <div id="program-director-div1" class="hide-when-school-changes1"><label>
-          I am the Program Director?
+          Are you the Program Director?
           <label><input type="radio" name="program-director1" value="Yes">Yes</label>
           <label><input type="radio" name="program-director1" value="No">No</label>
       </label></div>
