--- a/tinker/faculty_bio/templates/faculty-bio-form.html
+++ b/tinker/faculty_bio/templates/faculty-bio-form.html
@@ -159,7 +159,7 @@
             $('#areas').keyup(function() {
                 var count = $(this).val().length;
                 $('#areas_current_count').text(count);
-                if( count > 350)
+                if( count > 2000)
                     $('#areas_current_count').css("color", "#f04124");
                 else
                     $('#areas_current_count').css("color", "#000000");
@@ -180,7 +180,7 @@
             $('#research_interests').keyup(function() {
                 var count = $(this).val().length;
                 $('#research_interests_current_count').text(count);
-                if( count > 350)
+                if( count > 2000)
                     $('#research_interests_current_count').css("color", "#f04124");
                 else
                     $('#research_interests_current_count').css("color", "#000000");
@@ -201,7 +201,7 @@
             $('#teaching_specialty').keyup(function() {
                 var count = $(this).val().length;
                 $('#teaching_specialty_current_count').text(count);
-                if( count > 350)
+                if( count > 2000)
                     $('#teaching_specialty_current_count').css("color", "#f04124");
                 else
                     $('#teaching_specialty_current_count').css("color", "#000000");
@@ -390,16 +390,17 @@
             $('.hide-when-school-changes' + num).hide();
 
             function giveSelectValues(identifier, metadata_values) {
-                // add default - Select - value
+                // add default -select- value
                 var opt = document.createElement('option');
-                opt.value = '-Select-';
-                opt.innerHTML = '-Select-';
+                opt.value = '-select-';
+                opt.innerHTML = '-select-';
                 $('#' + identifier + num).append(opt);
 
                 for (var i = 0; i < metadata_values.length; i++) {
                     var opt = document.createElement('option');
-                    opt.value = metadata_values[i];
-                    opt.innerHTML = metadata_values[i];
+                    var metadata_value = metadata_values[i].replace('&', 'and');
+                    opt.value = metadata_value;
+                    opt.innerHTML = metadata_value;
                     $('#' + identifier + num).append(opt);
                 }
             }
