updated tinker form to show fields properly

--- a/tinker/faculty_bio/templates/faculty-bio-form.html
+++ b/tinker/faculty_bio/templates/faculty-bio-form.html
@@ -422,10 +422,10 @@
                 $('.hide-when-school-changes' + num).hide();
                 if( $(this).val() == 'Bethel University' ){
                     $('#new-job-title-div' + num).show();
-                } else if( $(this).val() == 'College of Arts & Sciences' ){
+                } else if( $(this).val() == 'College of Arts and Sciences' ){
                     $('#undergrad-div' + num).show();
                     $('#undergrad' + num).change();
-                } else if( $(this).val() == 'College of Adult & Professional Studies' ){
+                } else if( $(this).val() == 'College of Adult and Professional Studies' ){
                     $('#adult-undergrad-div' + num).show();
                     $('#adult-undergrad' + num).change();
                 } else if( $(this).val() == 'Graduate School' ){
