fixed bizarre error with old job titles messing up new job titles.

--- a/tinker/faculty_bio/templates/faculty-bio-form.html
+++ b/tinker/faculty_bio/templates/faculty-bio-form.html
@@ -241,9 +241,8 @@
 
      function newJobTitleFieldset(id){
             var title = 'job-title' + id;
-            var node = $('<fieldset>').addClass('job-fieldset');
+            var node = $('<fieldset>').addClass('job-fieldset').addStylesSet('display', 'none');
             node.append($("<legend>").html("Job Title " + id));
-            node.append('<small>Required</small>');
             node.append($("<input type='text'>").attr('name', title).attr('id', title));
 
             return node;
