Updated logic for job titles on fac bios

--- a/tinker/faculty_bio/templates/faculty-bio-form.html
+++ b/tinker/faculty_bio/templates/faculty-bio-form.html
@@ -444,8 +444,14 @@
                             $('#' + idToShowHide + num).hide();
                         } else {
                             $('#' + idToShowHide + num).show();
-                            var nextId = 'input[name="' + nextIdToDisplay + id + '"]';
+                            var nextId = 'input[name="' + nextIdToDisplay + num + '"]';
                             $(nextId).change();
+
+                            nextId = 'input[name=' + nextIdToDisplay + num + ']:checked';
+                            if( $(nextId).val() == 'No' || $(nextId).val() == 'Other')
+                                $('#new-job-title-div' + num).show();
+                            else
+                                $('#new-job-title-div' + num).hide();
                         }
                     }
                 });
