--- a/tinker/faculty_bio/templates/faculty-bio-form.html
+++ b/tinker/faculty_bio/templates/faculty-bio-form.html
@@ -192,7 +192,7 @@
                 $("#teaching_specialty_wrap").hide();
             });
         }
-        else if( val == "Teaching specialty"){
+        else if( val == "Teaching Specialty"){
           makeRequired();
           $("#teaching_specialty_wrap").show();
             $('#teaching_specialty').keyup(function() {
