Added new description to faculty bio submissions

--- a/tinker/faculty_bio/templates/faculty-bio-form.html
+++ b/tinker/faculty_bio/templates/faculty-bio-form.html
@@ -223,7 +223,7 @@
         $('#teaching_specialty').attr('required', false);
         $('#research_interests').attr('required', false);
 
-        heading = $('#heading')[0];
+        var heading = $('#heading')[0];
         var text = heading.options[heading.selectedIndex].innerHTML;
 
         if( text == "Areas of expertise")
