added back in lines...the csrf issue is back

--- a/tinker/e_announcements/templates/e-announcements-form.html
+++ b/tinker/e_announcements/templates/e-announcements-form.html
@@ -22,6 +22,9 @@
 {% block main_content %}
   <div class="row">
   <div class="large-12 columns">
+    {% if new_form %}
+      <form id="eannouncementform" action="/e-announcement/submit" method="post">
+    {% else %}
       <form id="eannouncementform" action="/e-announcement/submit" method="post">
       <input type="hidden" name="e_announcement_id" id="e_announcement_id" value="{{ e_announcement_id }}"/>
     {% endif %}
