fix e-announcement form

--- a/tinker/faculty_bio/templates/faculty-bio-form.html
+++ b/tinker/faculty_bio/templates/faculty-bio-form.html
@@ -27,6 +27,7 @@
   <div class="row">
   <div class="large-12 columns">
       <form id="facultybioform" action="/faculty-bio/submit" method="post" enctype="multipart/form-data">
+      <input name=_csrf_token type=hidden value="{{ csrf_token() }}">
       <input type="hidden" name="faculty_bio_id" id="faculty_bio_id" value="{{ faculty_bio_id }}"/>
 
         {% if form.errors %}
