added the extra csrf tokens back in

--- a/tinker/publish/templates/publish-home.html
+++ b/tinker/publish/templates/publish-home.html
@@ -22,6 +22,7 @@
 </div>
 
 <form action="." id="publish-search-form">
+<input name=_csrf_token type=hidden value="{{ csrf_token() }}">
   <div class="row">
 
     <div class="large-6 columns">
