Updated "Bethel University" to "Administration with Faculty Status"

--- a/tinker/faculty_bio/templates/faculty-bio-form.html
+++ b/tinker/faculty_bio/templates/faculty-bio-form.html
@@ -398,7 +398,7 @@
                         metadata_value = metadata_value.replace('&', 'and');
                     }
                     opt.value = metadata_value;
-                    opt.innerHTML = metadata_value;
+                    opt.innerHTML = metadata_value.replace('Bethel University', 'Administration with Faculty Status');
                     $('#' + identifier + num).append(opt);
                 }
             }
