Finished fixing imports
Now all I need to do is get it all working. Debugging tomorrow. Yay.

--- a/tinker/faculty_bio/templates/faculty-bio-home.html
+++ b/tinker/faculty_bio/templates/faculty-bio-home.html
@@ -22,7 +22,7 @@
 
   <div class="large-12 columns">
     {% if show_create %}
-      <a href="/faculty-bio/edit/new#page-title" class="small button success">Create New Bio</a>
+      <a href="/faculty-bio/new" class="small button success">Create New Bio</a>
     {% endif %}
    {% for form in forms%}
       <div class="row">
