--- a/tinker/faculty_bio/templates/faculty-bio-home.html
+++ b/tinker/faculty_bio/templates/faculty-bio-home.html
@@ -16,7 +16,7 @@
 {# A little macro to be used with the 2 separate calls #}
 {% macro display_bio(bio) -%}
     <div class="row">
-        <div class="large-6 columns">
+        <div class="large-5 columns">
           <p>
             {% if bio.path != '' %}
               <a href={{ bio.path }}>{{ bio.title }}</a>
@@ -27,7 +27,7 @@
             {% if bio.path != '' %}<small><a href={{ bio.path }}>{{ bio.path }}</a></small>{% endif %}
           </p>
         </div>
-        <div class="large-6 columns small-3">
+        <div class="large-7 columns small-3">
           <ul class="button-group">
             {% if bio.path != '' %}
               <li><a href="{{ bio.path }}" class="small button success">View</a></li>
@@ -35,7 +35,16 @@
             {% else %}
               <li><a class="small button success">Not Approved</a></li>
             {% endif %}
-            <li><a href="#" data-reveal-id="confirmModal" id="{{ bio.id }}" data-faculty-bio-id="{{ bio.id }}" class="small button alert delete-press">Delete</a></li>
+
+                {% if bio.deactivated == 'YES' %}
+                    <li><div id="{{ bio.id }}" data-method='activate' data-faculty-bio-id="{{ bio.id }}" class="small button alert activate-press">Activate</div></li>
+                {% else %}
+                    <li><div id="{{ bio.id }}" data-method='deactivate' data-faculty-bio-id="{{ bio.id }}" class="small button alert activate-press">Deactivate</div></li>
+                {% endif %}
+
+              {% if show_special_admin_view %}
+                <li><a href="#" data-reveal-id="confirmModalDelete" id="{{ bio.id }}" data-faculty-bio-id="{{ bio.id }}" class="small button alert delete-press">Delete</a></li>
+              {% endif %}
            </ul>
         </div>
         <hr/>
@@ -43,6 +52,7 @@
 {%- endmacro %}
 
 {% block main_content %}
+<input name=_csrf_token type=hidden value="{{ csrf_token() }}">
 <div class="row">
   <div class="large-12 columns">
 
@@ -107,26 +117,52 @@
   </div>
 </div>
 
-
-
-
-{#Delete confirm modal#}
-<div id="confirmModal" class="reveal-modal" data-reveal>
+{# Delete confirm modal #}
+<div id="confirmModalDelete" class="reveal-modal" data-reveal>
   <h2>Are you sure you want to delete?</h2>
   <p class="lead">Your faculty bio page will be removed.</p>
-  <a class="modal-confirm" id="modal-confirm" href="/faculty-bio/delete/formid">Delete</a>
+  <a class="modal-confirm-delete" id="modal-confirm-delete" href="/faculty-bio/delete/formid">Delete</a>
   <a class="close-reveal-modal">&#215;</a>
 </div>
-
 {% endblock %}
 
 {% block scripts %}
 
 {#  Script to update the modal submit to delete the correct form#}
+  <script src="/static/csrf-activator.js"></script>
   <script type="text/javascript">
+    var csrftoken = "{{ csrf_token() }}";
+    activateCSRF(csrftoken);
+
     $(".delete-press").click(function(){
-      $("#modal-confirm").attr("href", "/faculty-bio/delete/" + $(this).data('faculty-bio-id'));
+      $("#modal-confirm-delete").attr("href", "/faculty-bio/delete/" + $(this).data('faculty-bio-id'));
     });
+
+    $(".activate-press").click(function(){
+        var current_element = $(this);
+        var inputs = {"id": current_element.data('faculty-bio-id'), "activate": current_element.attr('data-method')};
+        var url = '/faculty-bio/activate';
+
+        // temporarily create a placeholder.
+        // Todo: change this to a gif.
+        current_element.html('. . . Updating . . .');
+         $.ajax({
+            type : "POST",
+            url : url,
+            data: JSON.stringify(inputs),
+            contentType: 'application/json;charset=UTF-8',
+            success: function(result) {
+                  if( current_element.attr('data-method') == 'activate') {
+                      current_element.attr('data-method', 'deactivate');
+                      current_element.html('Deactivate');
+                  } else {
+                      current_element.attr('data-method', 'activate');
+                      current_element.html('Activate');
+                  }
+            }
+        });
+    });
+
   $(document).foundation();
   </script>
 
