Did a few CSRF changes
Committing my changes to pull in Caleb’s CSRF fixes, hopefully that
should take care of it.

--- a/tinker/redirects/templates/redirects.html
+++ b/tinker/redirects/templates/redirects.html
@@ -8,7 +8,7 @@
 
 {% block main_content %}
     <form action="." id="new-redirect-form">
-        <input name=_csrf_token type=hidden value="{{ csrf_token() }}">
+        {{ form.csrf_token }}
         <div class="row">
             <div class="large-6 columns">
                 <label>From Path
