--- a/tinker/events/templates/event-form.html
+++ b/tinker/events/templates/event-form.html
@@ -30,7 +30,7 @@
       <input type="hidden" name="event_id" id="event_id" value="{{ event_id }}"/>
       <input type="hidden" name="author" id="author" value="{{ author }}"/>
     {% endif %}
-    <input name=_csrf_token type=hidden value="{{ csrf_token() }}">
+    {{ form.csrf_token }}
         {% if form.errors %}
           <div class="alert alert-error">
             <div data-alert class="alert-box alert radius">
