--- a/tinker/faculty_bio/templates/faculty-bio-confirm-new.html
+++ b/tinker/faculty_bio/templates/faculty-bio-confirm-new.html
@@ -8,6 +8,7 @@
 
   <div class="row">
     <div class="large-12 columns">
+        <input type="hidden" id="faculty_bio_id" value="{{ faculty_bio_id }}"/>
         <h1>Congrats!</h1>
         <p>You've successfully created a new bio. Your brand new bio has been sent for approval but will be ready to view in 2-3 business days.</p>
 
