Refactored FacultyBioView.new() method
Addressed the TODOs Caleb had put in.

--- a/tinker/faculty_bio/templates/faculty-bio-form.html
+++ b/tinker/faculty_bio/templates/faculty-bio-form.html
@@ -28,7 +28,11 @@
   <div class="large-12 columns">
       <form id="facultybioform" action="/faculty-bio/submit" method="post" enctype="multipart/form-data">
       {{ form.csrf_token }}
-      <input type="hidden" name="faculty_bio_id" id="faculty_bio_id" value="{{ faculty_bio_id }}"/>
+      {% if faculty_bio_id %}
+          <input type="hidden" name="faculty_bio_id" id="faculty_bio_id" value="{{ faculty_bio_id }}"/>
+      {% else %}
+          <input type="hidden" name="faculty_bio_id" id="faculty_bio_id" value=""/>
+      {% endif %}
 
         {% if form.errors %}
           <div class="alert alert-error">
